--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ a:hover {
 #accom{
    font-family: 'Lora', serif;
   font-size: 18px;
-  color: #1e1e1e;
+  color: white;
   padding-bottom: 10px;
 }
 
